--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 
 <body>
     <header>
+        <a href="">WebStudio</a>
         <nav>
-            <li><a href="/">WebStudio</a></li>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
-        </nav>
-        <a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a>
-        <br>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+            </nav3>
+            <a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a>
+            <br>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -26,19 +28,19 @@
         <section>
             <il>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также <br> начало повседневной работы по <br> формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности <br> же рамки и место обучения кадров <br> влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с <br> широким активом в значительной <br> степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько <br> очевидна, что реализация плановых <br> заданий.</p>
                 </li>
                 </ul>
@@ -46,31 +48,33 @@
         <section>
             <p>Чем мы занимаемся</p>
             <ul>
-                <li><img src="/images/imagefor1.jpg" alt="person is writing code on keyboard" width="370" height="294"></li>
-                <li><img src="/images/imagefor2.jpg" alt="person is taiking phone in left hend" width="370" height="294"></li>
-                <li><img src="/images/imagefor3.jpg" alt="person is choosing a color on the computer" width="370" height="294"></li>
+                <li><img src="/images/imagefor1.jpg" alt="человек пишет код" width="370" height="294"></li>
+                <li><img src="/images/imagefor2.jpg" alt="человек берет телефон в левую руку" width="370" height="294">
+                </li>
+                <li><img src="/images/imagefor3.jpg" alt="человек выбирает цвет на планшете" width="370" height="294">
+                </li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/people/person1.jpg" width="270" height="260" />
+                    <img src="/images/people/person1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/people/person2.jpg" width="270" height="260" />
+                    <img src="/images/people/person2.jpg" alt="фото Ольга Репина" width="270" height="260" />
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/people/person3.jpg" width="270" height="260" />
+                    <img src="/images/people/person3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/people/person4.jpg" width="270" height="260" />
+                    <img src="/images/people/person4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -78,15 +82,16 @@
         </section>
     </main>
     <footer>
-        <ul>
-            <li><a href="/">WebStudio</a></li>
-            <li>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a>
-            <br>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </ul>
+        <a href="/">WebStudio</a>
+
+        <address>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+
     </footer>
 </body>
 
