--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-            </nav3>
-            <a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a>
-            <br>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </nav>
+        <a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a>
+        <br>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
         <section>
             <il>
                 <li>
@@ -46,12 +48,12 @@
                 </ul>
         </section>
         <section>
-            <p>Чем мы занимаемся</p>
+            <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/images/imagefor1.jpg" alt="человек пишет код" width="370" height="294"></li>
-                <li><img src="/images/imagefor2.jpg" alt="человек берет телефон в левую руку" width="370" height="294">
+                <li><img src="./images/imagefor1.jpg" alt="человек пишет код" width="370" height="294"></li>
+                <li><img src="./images/imagefor2.jpg" alt="человек берет телефон в левую руку" width="370" height="294">
                 </li>
-                <li><img src="/images/imagefor3.jpg" alt="человек выбирает цвет на планшете" width="370" height="294">
+                <li><img src="./images/imagefor3.jpg" alt="человек выбирает цвет на планшете" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -59,22 +61,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/people/person1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
+                    <img src="./images/people/person1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/people/person2.jpg" alt="фото Ольга Репина" width="270" height="260" />
+                    <img src="./images/people/person2.jpg" alt="фото Ольга Репина" width="270" height="260" />
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/people/person3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
+                    <img src="/.images/people/person3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/people/person4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
+                    <img src="./images/people/person4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -86,7 +88,7 @@
 
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto: info@devstudio.com" target="_blank">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
